crates/macros/tests/debug_job/fail/generics.stderr
error: `#[blueprint_macros::debug_job]` doesn't support generic functions
 --> tests/debug_job/fail/generics.rs:4:13
  |
4 | async fn job<T>(_extract: T) {}
  |             ^^^
